WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253886
OffscreenCanvas does not work as TexImageSource in WebGL
https://bugs.webkit.org/show_bug.cgi?id=253886
Summary
OffscreenCanvas does not work as TexImageSource in WebGL
Kimmo Kinnunen
Reported
2023-03-14 07:02:49 PDT
OffscreenCanvas does not work as TexImageSource in WebGL
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-14 07:03:56 PDT
<
rdar://problem/106700463
>
Kimmo Kinnunen
Comment 2
2023-03-15 06:53:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11549
EWS
Comment 3
2023-03-23 01:22:04 PDT
Committed
262009@main
(4ca89ddeb5a2): <
https://commits.webkit.org/262009@main
> Reviewed commits have been landed. Closing PR #11549 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug