OffscreenCanvas does not work as TexImageSource in WebGL https://bugs.webkit.org/show_bug.cgi?id=253886 rdar://106700463

Reviewed by Matt Woodrow.

Add texImageSource overload for OffscreenCanvas. Later on the Context2D,
WebGL and OffscreenCanvas codepaths could be unified and made faster.

* Source/WebCore/html/canvas/WebGL2RenderingContext.h:
* Source/WebCore/html/canvas/WebGL2RenderingContext.idl:
* Source/WebCore/html/canvas/WebGLRenderingContext.idl:
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImageSource):
(WebCore::WebGLRenderingContextBase::validateOffscreenCanvas):
* Source/WebCore/html/canvas/WebGLRenderingContextBase.h:
* LayoutTests/TestExpectations:
Explicitly add pass on tests that would timeout with OffscreenCanvas
not working correctly.

Canonical link: https://commits.webkit.org/262009@main